--- a/style.css
+++ b/style.css
@@ -8,30 +8,38 @@ body{
       line-height: 150%;
     }
 
-  #logos{
-    float:left;
-  }
 
 .icons{
   list-style: none;
   float: right;
 }
+#name {
+  font-size: 300%;
+  color: #fefbd8;
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  letter-spacing: 2px;
+  font-family: 'Raleway', sans-serif;
+  text-decoration: overline;
+
+}
 
 nav {
-  padding-bottom: 3px;
-  /*border-bottom: 5px solid grey;*/
-  color: white;
+  clear: both;
+  padding-bottom: 1px;
   text-decoration: none;
 
   /*border: 2px solid #80ced6;*/
 }
 #myPicture{
-  /*float: left;*/
+  float: left;
   border-radius: 25%;
-  height: 35%;
+  height: auto;
   width: 35%;
-  margin-top: 8%;
+  margin-top: 2%;
   margin-left: 2%;
+  margin-right: 2%;
   border: 1px solid #618685;;
 }
 
@@ -44,6 +52,7 @@ body{
 li{
 
   display: inline;
+
 }
 
 aside{
@@ -55,19 +64,25 @@ aside{
 
 }
 
+p{
+  font-size: 1.5em;
+  font-family: 'Raleway', sans-serif;
 
+}
 article{
-    background-image: url("images/macbook.jpg");
-
-    border: 5px solid #d5f4e6;
-    /*border-top: 5px solid #d5f4e6;*/
+    /*background-image: url("images/macbook.jpg");*/
+    background-color: grey;
+    border-bottom: 6px solid #d5f4e6;
+    border-top: 1px solid #d5f4e6;
+    border-left: 6px solid #d5f4e6;
+    border-right: 1px solid #d5f4e6;
     background-repeat: no-repeat;
     color: #fefbd8;
-    font-size: 2em;
-
 
 }
 footer {
-    display: inline-block;
-    text-align: left;
+
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+
 }
