--- a/style.css
+++ b/style.css
@@ -15,21 +15,20 @@ h3{
   text-transform: lowercase;
   color: #fefbd8;
   margin-bottom: 2em;
+  /*margin-right: 1em;*/
+  margin-top: -1em;
   float: right;
-  border-top: 1px solid #d5f4e6;
-  border-left: 6px solid #d5f4e6;
-  border-right: 1px solid #d5f4e6; 
 
 }
 
-#mywork{
-float: left;
+.mywork{
+float: right;
 }
 #name1 {
   font-size: 400%;
   color: #fefbd8;
   text-align: left;
-  margin-left: 9%;
+  margin-left: .1%;
   margin-right: 20%;
   margin-bottom: 0;
   letter-spacing: 6px;
@@ -43,9 +42,9 @@ float: left;
   font-size: 400%;
   color: #fefbd8;
   text-align: left;
-  margin-left: 20%;
+  margin-left: 10%;
   margin-right: 20%;
-  margin-bottom: 0;
+  margin-bottom: -.18em;
   margin-top: 0;
   letter-spacing: 6px;
   font-family: 'Raleway', sans-serif;
@@ -54,9 +53,6 @@ float: left;
 
 }
 
-img{
-  border-radius: 5%;
-}
 
 nav {
   padding-bottom: 1px;
@@ -66,17 +62,27 @@ nav {
 }
 #myPicture{
   float: left;
-  border-radius: 5%;
-  height: auto;
-  width: 35%;
-  margin: 2%;
+  border-top-left-radius: 50%;
+  height: 25%;
+  width: 30%;
+  margin-top: 5em;
+  margin-right: 2%;
+  margin-left: 8%;
   border: 1px solid #618685;
-  margin-bottom: 15%;
+  margin-bottom: 8%;
 
+}
+h4{
+  display: inline;
 }
 
 body{
-  background-color: #618685;
+  /*background-color: #618685;*/
+  background-image: linear-gradient(bottom, #fefbd8 50%, #618685 50%);
+  background-image: -o-linear-gradient(bottom, #fefbd8 50%, #618685 50%);
+  background-image: -moz-linear-gradient(bottom, #fefbd8 50%, #618685 50%);
+  background-image: -webkit-linear-gradient(bottom, #fefbd8 50%, #618685 50%);
+  background-image: -ms-linear-gradient(bottom, #fefbd8 50%, #618685 50%);
 }
 #aboutMe{
   align-content:right;
@@ -84,7 +90,8 @@ body{
   border-top: 1px solid #d5f4e6;
   border-left: 6px solid #d5f4e6;
   border-right: 1px solid #d5f4e6;
-  line-height: 1.7em;
+  line-height: 1.9em;
+  font-family: 'Raleway', sans-serif;
 }
 
 #ducktimer{
@@ -109,26 +116,41 @@ li{
 p{
   font-size: 1.0em;
   text-indent: 2em;
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Raleway', sans-serif;
   margin: 2em;
+
 }
 
 article{
-    background-color: grey;
+    background-color: #c1cdcd;
     border-bottom: 6px solid #d5f4e6;
     border-top: 1px solid #d5f4e6;
     border-left: 6px solid #d5f4e6;
     border-right: 1px solid #d5f4e6;
     background-repeat: no-repeat;
-    color: #fefbd8;
+    color: #618685;
     margin-top: 1em;
-      margin-bottom: 1em;
+    font-family: 'Raleway', sans-serif;
+    margin-bottom: 1em;
 
 }
 footer {
     clear: both;
     text-align: center;
-    color: #fefbd8;
+    color: #618685;
     font-family: 'Raleway', sans-serif;
+
+}
+#rays{
+  border-bottom: 6px solid #618685;
+  border-top: 1px solid #618685;
+  border-left: 6px solid #618685;
+  border-right: 1px solid #618685;
+}
+#ducktimer{
+  border-bottom: 6px solid #618685;
+  border-top: 1px solid #618685;
+  border-left: 6px solid #618685;
+  border-right: 1px solid #618685;
 
 }
